gatekeeper/nonroot/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snonroot
  annotations:
    description: >-
      Requires pods to run as non root.
spec:
  crd:
    spec:
      names:
        kind: k8snonroot
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snonroot

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.securityContext.runAsUser == 0
            msg := "Pod must have spec.securityContext.runAsUser unset or set to a number greater than zero"
        }

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.containers[_].securityContext.runAsUser == 0
            msg := "Pod must have spec.containers[*].securityContext.runAsUser unset or set to a number greater than zero"
        }

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.initContainers[_].securityContext.runAsUser == 0
            msg := "Pod must have spec.initContainers[*].securityContext.runAsUser unset or set to a number greater than zero"
        }

        violation[{"msg": msg, "details": {}}] {
            input.review.object.spec.ephemeralContainers[_].securityContext.runAsUser == 0
            msg := "Pod must have spec.ephemeralContainers[*].securityContext.runAsUser unset or set to a number greater than zero"
        }
